left align issue fix on all pages

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -996,6 +996,7 @@ button {
 .tab_img_box {
   display: flex;
   align-items: center;
+  padding: 0px !important;
 }
 
 .footer_contantbox_tab {
